--- a/Form_Validation/index.html
+++ b/Form_Validation/index.html
@@ -34,13 +34,13 @@
         <div class="form-control">
           <label for="password2">Confirm Password</label>
           <input
-            type="text"
+            type="password"
             id="password2"
             placeholder="Enter password again"
           />
           <small>Error message</small>
         </div>
-        <button>Submit</button>
+        <button type="submit">Submit</button>
       </form>
     </div>
     <!-- script:src creates the html below -->
